pootle/static/css/style.css
/* ... */
.form.success
{
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeffdd', endColorstr='#ccff99');
    background: -webkit-gradient(linear, left top, left bottom, from(#efd), to(#cf9));
    background: -webkit-linear-gradient(top,  #efd,  #cf9);
    background:    -moz-linear-gradient(top,  #efd,  #cf9);
    background:     -ms-linear-gradient(top,  #efd,  #cf9);
    background:      -o-linear-gradient(top,  #efd,  #cf9);
    background:         linear-gradient(top,  #efd,  #cf9);
}

.form.error
{
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffeeee', endColorstr='#ffcccc');
    background: -webkit-gradient(linear, left top, left bottom, from(#fee), to(#fcc));
    background: -webkit-linear-gradient(top,  #fee,  #fcc);
    background:    -moz-linear-gradient(top,  #fee,  #fcc);
    background:     -ms-linear-gradient(top,  #fee,  #fcc);
    background:      -o-linear-gradient(top,  #fee,  #fcc);
    background:         linear-gradient(top,  #fee,  #fcc);
}

.form p.info
{
    margin: 0.3em 0;
}

.form .success
{
    color: #390;
}

.form .error
{
    color: #c33;
}

p.help,
span.help_text
{
    font-size: 85%;
    font-style: italic;
}

/* FORM ERROR LISTS */

ul.errorlist
{
    margin: 0;
    padding: 0;
}

.errorlist li
{
    color: #c33;
    margin-top: 0.2em;
}



/*
 * NEWS FORM
 */

.news-feed,
.news-feed-with-form
{
    margin-top: 2em;
}

.news-feed-with-form
{
    margin-left: 38em;
}

.news
{
    margin: 2em 0;
    float: left;
}

/*
 * CAPTCHA FORM
 */

.form .captcha
{
    text-align: left;
    margin-top: 1em;
}

.form .captcha label
{
    font-size: 120%;
    margin-right: 0.6em;
}

.form .captcha input[type="text"]
{
    font-size: 120%;
    width: 3em;
}

.form .captcha input[type="submit"]
{
    margin-left: 1em;
    vertical-align: bottom;
}

.form .captcha ul.errorlist
{
    float: right;
    line-height: 2em;
}


/*
 * STATIC PAGES, ABOUT, CONTRIBUTORS
 */

#staticpage,
#about
{
    margin: 2em auto;
    font-size: 120%;
    max-width: 960px;
}

#about .document h1
{
    margin-top: .5em;
    margin-bottom: .25em;
}

#about h2,
#about h3
{
    border-bottom: 1px solid #eee;
}

#about h3
{
    margin-top: 1.5em;
}

#about p
{
    margin: 1em 0;
}

#about ol,
#about ul
{
    margin: 1em 1.5em;
}

#about ul li
{
    list-style-type: square;
}

#about ol li
{
    list-style-type: inherit;
}

#about dfn
{
    border-bottom: 1px dotted #130f30;
}

#about .sidenote
{
    width: 10em;
    font-size: 95%;
    background-color: #ffe;
    padding: 0 1em;
    border: 1px dashed #cc9;
    margin-top: 4em;
    color: #777;
}

#about .sidenote p
{
    line-height: 130%;
}

#about .sidenote li
{
    margin: 0.2em 0;
}

#staticpage h1
{
    font-size: 2.2em;
    line-height: 85%;
    margin: 1em 0 0.5em;
    margin-bottom: 1em;
}

#staticpage h2
{
    color: rgba(25, 15, 0, 0.5);
    font-size: 1.8em;
    margin: 1em 0 0.5em;
}

#staticpage h3
{
    margin: 1em 0 0.5em;
}

#staticpage p
{
    margin: 0.5em 0;
}

#contributors ul,
#contributors ul li
{
    margin: 0;
    list-style-type: none;
}

#contributors ul li
{
    padding-left: 25px;
}

html[dir="rtl"] #contributors ul li
{
    padding-right: 25px;
}

#contributors ul li.lang
{
    font-weight: bold;
    font-size: 120%;
    margin-top: 12px;
}

#contributors ul li.proj
{
    font-weight: bold;
    font-size: 80%;
}

#contributors ul li.user
{
    font-weight: normal;
    font-size: 100%;
}


/*
 * SETTINGS PAGE
 */

div.settings-container
{
    display: block;
    margin: 0 auto 2em;
    margin: 1em;
}

.settings-container h2
{
    margin: 0 0 0.5em;
}

.settings-container h2,
.module .hd h2,
.module-primary .hd h2,
.hd h2
{
    font-family: webfont_light, 'Helvetica Neue', Helvetica, Helvetica, Arial, sans-serif;
    font-size: 2.2em;
}

.settings-container p
{
    margin-bottom: 1em;
}

.settings-container input,
.settings-container select,
.settings-container textarea,
#login input[type="text"],
#login input[type="password"],
#login select,
#register input[type="text"],
#register input[type="password"]
{
    display: block;
}

#login-wrapper
{
    margin: auto;
    overflow: hidden;
    padding: 2em;
}

#login-alternative
{
    float: right;
    padding-top: 2em;
    text-align: right;
}

html[dir="rtl"] #login-alternative
{
    float: left;
    text-align: left;
}

#login-alternative h4
{
    margin-bottom: 0.7em;
}

#login-alternative h5
{
    font-size: 1.15em;
    margin-bottom: 0.5em;
}

#forgot-password
{
    float: left;
}

html[dir="rtl"] #forgot-password
{
    float: right;
}

.settings-container table
{
    width: 100%;
    margin-bottom: 1em;
}

.settings-container td
{
    font-size: inherit;
}

div#settings
{
    margin-bottom: 2em;
}

/* ADMIN TABLE BACKGROUNDS */

.other-selected
{
    background-color: #8ec904 !important;
}

.delete-selected
{
    background-color: #e08566 !important;
}

.delete-selected:nth-child(even)
{
    background-color: #d67f62 !important;
}

.delete-selected > *
{
    opacity: 0.4;
}

.delete-selected td.DELETE
{
    opacity: 1;
}

.other-selected a,
.delete-selected a
{
    color: #fff;
}

/*
 * SUMMARIES
 */

div.newsitem-sep
{
    border-bottom: 1px solid #ddd;
    margin: 1.5em 0 2em;
}

div#rss-alerts ul,
div.latestnews ul
{
    margin: 0 1em;
}

div#rss-alerts li,
div.latestnews li
{
    list-style-type: square;
}

.subscribe
{
    margin-top: 1em;
}

tr.item.empty
{
    opacity: 0.65;
}

table.stats td.language,
table.stats td.project
{
    white-space: nowrap;
}

td.stats-name
{
    white-space: nowrap;    
}

td.stats-number
{
    padding-right: 26px !important; /* magic number to put padding between right and left aligned column, and to right-align heading with number */
}

td.stats-percentage
{
    display: none;
}

table.stats .number,
th.stats-number,
td.stats-number,
td.stats-percentage
{
    text-align: right;
}
/* ... */

